--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
   <title>Geometry</title>
-  <!--<link rel="shortcut icon" href="favicon.ico">-->
-  <link href="styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link href="styles/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
   <section id="app"></section>
